ex1/codepkg/objects/TravelRequest__c.object
<CustomObject>
    <fields>
        <fullName>Accommodation__c</fullName>
        <label>Accommodation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AirFare__c</fullName>
        <label>AirFare</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysOfTravel__c</fullName>
        <formula>EndDate__c - StartDate__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days of Travel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>Travel End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Miscellaneous__c</fullName>
        <label>Miscellaneous</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose of Travel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Travel Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>AirFare__c + Accommodation__c + Miscellaneous__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Travel Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>出張申請名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>